# ai-chatbot.advenoh.pe.kr

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: release.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/.github/workflows/: reindex-rag.yml
backend/app/: config.py  main.py
backend/app/api/: models.py  routes.py
backend/app/core/: logging.py
backend/app/db/: connection.py  models.py  repository.py
backend/app/evaluation/: dataset.py  evaluator.py
backend/app/middleware/: request_logging.py
backend/app/prompts/: templates.py
backend/app/rag/: chain.py  chunker.py  document_loader.py  embedder.py  inspireme_loader.py  retriever.py  vector_store.py
backend/liquibase/: changelog.yaml  liquibase.properties
backend/liquibase/changes/2026-02/: 1-create_query_logs.sql  2-create_feedbacks.sql
backend/scripts/: cron_reindex.sh  evaluate.py  index_documents.py
backend/tests/: test_api.py  test_chunker.py  test_document_loader.py  test_inspireme_loader.py
docs/done/: 2_auto_indexing_implementation.md  2_sample_q_implementation.md  2_sample_q_prd.md  3_prompt_implementation.md  3_prompt_prd.md  3_prompt_todo.md  5_ai_chatbot_logging_implementation.md  5_ai_chatbot_logging_prd.md  5_ai_chatbot_logging_todo.md  5_header_implementation.md  5_header_prd.md  5_header_todo.md
docs/start/: 2_auto_indexing_implementation.md  2_auto_indexing_prd.md  2_auto_indexing_todo.md  2_sample_q_todo.md  3_inspire_bot_prd.md  (+7 more)
frontend/: Dockerfile  package-lock.json  package.json
scripts/: docker-push.sh  release.sh
(+14 files in other folders)
